feat: add and remove favorites

--- a/frontend-vue/tsconfig.json
+++ b/frontend-vue/tsconfig.json
@@ -14,9 +14,10 @@
     "paths": {
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
-      "@types/*": ["src/types/*"],
+      "@models/*": ["src/models/*"],
       "@utils/*": ["src/utils/*"],
-      "@services/*": ["src/services/*"]
+      "@services/*": ["src/services/*"],
+      "@icons/*": ["src/components/icons/*"],
     }
   },
   "references": [
