feat: atomic design structure

--- a/frontend-vue/tsconfig.json
+++ b/frontend-vue/tsconfig.json
@@ -15,7 +15,7 @@
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
       "@models/*": ["src/models/*"],
-      "@utils/*": ["src/utils/*"],
+      "@composables/*": ["src/composables/*"],
       "@services/*": ["src/services/*"],
       "@icons/*": ["src/components/icons/*"],
     }
