--- a/backend-nestjs/package.json
+++ b/backend-nestjs/package.json
@@ -24,8 +24,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "bcryptjs": "^3.0.2",
+    "class-validator": "^0.14.2",
     "mongoose": "^8.14.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -40,7 +42,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
-    "@types/passport": "^0",
+    "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
