--- a/backend-nestjs/package.json
+++ b/backend-nestjs/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^11.0.0",
@@ -27,6 +28,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^11.2.0",
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "class-validator": "^0.14.2",
     "mongoose": "^8.14.2",
