feat: signin and signup pages

--- a/frontend-vue/tsconfig.json
+++ b/frontend-vue/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
+    "lib": ["DOM", "ES2015"],
     "moduleResolution": "Node",
     "strict": true,
     "jsx": "preserve",
