--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "pinia": "^3.0.1",
+    "postcss": "^8.5.3",
     "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
