--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
+    "@vueuse/core": "^13.2.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "pinia": "^3.0.1",
