--- a/frontend-vue/tsconfig.node.json
+++ b/frontend-vue/tsconfig.node.json
@@ -6,6 +6,7 @@
     "cypress.config.*",
     "nightwatch.conf.*",
     "playwright.config.*",
+    "tailwind.config.*",
     "eslint.config.*"
   ],
   "compilerOptions": {
