feat: tests done

--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -35,8 +35,10 @@
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitest/eslint-plugin": "^1.1.39",
+    "@vue/compiler-dom": "^3.5.14",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.5.0",
+    "@vue/server-renderer": "^3.5.14",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "cypress": "^14.2.1",
