--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -30,6 +30,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@testing-library/vue": "^8.1.0",
     "@tsconfig/node22": "^22.0.1",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.14.0",
