--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -27,7 +27,8 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@testing-library/vue": "^8.1.0",
